Hopefully fixed gap in page

--- a/public/style.css
+++ b/public/style.css
@@ -2,7 +2,7 @@
 
 * {
 
-    font-family: -apple-system, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
 }
 
 #header * {
@@ -83,7 +83,6 @@
     top: 80px;
     left: 192px;
     margin-left: -192px;
-    overflow-x: hidden;
 
 }
 
@@ -246,7 +245,7 @@ img {
         #fbbf24,   /* golden yellow */
         #9a3412    /* burnt sienna */
     );
-    top: 1400px;
+    top: 1445px;
     position: absolute;
     left: 0vw;
     overflow-x: hidden;
